--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "html-entities": "^2.4.0",
     "nodejs": "^0.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "xml-parser": "^1.2.1"
